[package]
authors = ["Cory Forsyth"]
categories = ["wasm","image"]
description = "Image evolution"
license = "Apache-2.0/MIT"
name = "image-evol"
readme = "./README.md"
repository = "https://github.com/bantic/image-evol"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "=0.2.34"
nalgebra = "0.17.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]

[dependencies.rand]
version = "0.6.5"
features = [ "wasm-bindgen" ]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.2"
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
